@@ -1,6 +1,8 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Utils]
+ - dep_changes: Enable LMDB Backend as an option.
 
 2.020001 2014-09-06T03:22:12Z
  [Bugfix]
